--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script src="https://kit.fontawesome.com/e7a95938a9.js" crossorigin="anonymous"></script>
     <title>metaversius</title>
     <style>
         body {
@@ -19,6 +20,9 @@
 <body>
     <div id="first" align = "center"><h1 >metaversius</h1>
     <p>on the way</p>
+    <a href="https://www.twitter.com/metaversius" >
+        <i class="fab fa-twitter" href="twitter.com/metaversius"></i>
+    </a>
     </div>
     
 
