on the way quote added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Antonio' rel='stylesheet'>
     <script src="https://kit.fontawesome.com/e7a95938a9.js" crossorigin="anonymous"></script>
     <title>metaversius</title>
     <style>
         body {
             background-color:#3d0c9f;
-            font: 16pt monospace;
+            
             color: white;
         }
 
@@ -19,12 +20,17 @@
         a {
             color : white;
         }
+        #ontheway {
+            font-family: "Antonio";
+            font-size: 20pt;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <div id="first" align = "center">
     <img src="./images/logo.png" alt="logo" width="400" height="400">
-    <p>ON THE WAY</p>
+    <p id="ontheway">ON THE WAY</p>
     <a href="https://www.twitter.com/metaversius" >
         <i class="fab fa-twitter" href="twitter.com/metaversius"></i>
     </a>
