tweets are added.

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 <body>
     <div id="first" align = "center">
     <img src="./images/logo.png" alt="logo" width="400" height="400">
+    <br>
+    <a class="twitter-timeline" href="https://twitter.com/metaversius?ref_src=twsrc%5Etfw" width="1200" height="800"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <p id="ontheway">ON THE WAY</p>
     <a href="https://www.twitter.com/metaversius" >
         <i class="fab fa-twitter" href="twitter.com/metaversius"></i>
     </a>
+    
     </div>
     
-
-
-
 </body>
 
 </html>
