some errors fixed.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,9 @@
     font: 21pt 'Antonio';"
     
     >Connect me!</p>
-    <a href="https://www.twitter.com/metaversius" >
-        <i class="fab fa-twitter"></i>
-    </a>
+    <a href="https://www.twitter.com/metaversius"><i class="fab fa-twitter"></i></a>
     <br><br>
-    <a href="https://yildirimomer.medium.com/" height="90" width="90">
-        <i class="fab fa-medium" height="90" width="90"></i>
-    </a>
+    <a href="https://yildirimomer.medium.com/"><i class="fab fa-medium"></i></a>
     <br><br><br><br>
     <a class="twitter-timeline" href="https://twitter.com/metaversius?ref_src=twsrc%5Etfw" width="600" height="500"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     
