--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <a href="https://www.twitter.com/metaversius"><i class="fab fa-twitter"></i></a>
     <br><br>
     <a href="https://yildirimomer.medium.com/"><i class="fab fa-medium"></i></a>
+    <br><br>
+    <a href="https://www.linkedin.com/in/%C3%B6mer-y%C4%B1ld%C4%B1r%C4%B1m-99397a233/"><i class="fab fa-linkedin"></i></a>
     <br><br><br><br>
     <a class="twitter-timeline" href="https://twitter.com/metaversius?ref_src=twsrc%5Etfw" width="600" height="500"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     
